--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 <body>
 
+  <div class="toggle">
+    <input type="checkbox" id="toggle" />
+    <label for="toggle"></label>
+  </div>
+  
   <section id="contact">
 		<div class="overlay">
 			<div class="containers">
