--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-
+<section>
   <div class="toggle">
     <input type="checkbox" id="toggle" />
     <label for="toggle"></label>
   </div>
-  
+</section>
   <section id="contact">
 		<div class="overlay">
 			<div class="containers">
