--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <section>
   <div class="toggle">
     <input type="checkbox" id="toggle" />
-    <label for="toggle"></label>
+    <label for="toggle"><h4>Click this box to change the color</h4></label>
   </div>
 </section>
   <section id="contact">
